completed the first (employee) form  completely with both validation and store value is sessionStorage memory

--- a/src/components/TextFields/TextFields.scss
+++ b/src/components/TextFields/TextFields.scss
@@ -1,6 +1,5 @@
 .textField {
   width: 455px;
-  padding: 2px 24px 0 24px;
   div {
     font-family: 'Helvetica Neue';
     font-style: normal;
@@ -31,7 +30,7 @@
     font-size: 14px;
   }
 }
-.error {
+.fieldError {
   input {
     border: 1.8px solid #e52f2f;
     &:active,
@@ -45,5 +44,11 @@
   }
   p {
     color: #e52f2f;
+  }
+}
+.inputcontianer {
+  position: relative;
+  svg {
+    position: absolute;
   }
 }
