--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -1,11 +1,10 @@
 .select_container {
   position: relative;
-  margin: 2px 24px 0 24px;
-  width: 95%;
+  width: 100%;
   height: 60px;
   background: #ebebeb;
   border-radius: 8px;
-  padding-top: 20px;
+  padding-top: 17px;
 }
 .select_name {
   display: flex;
@@ -33,4 +32,8 @@
   &:hover {
     background-color: #e7f0f8;
   }
+}
+.error {
+  border: 1.8px solid #e52f2f;
+  color: black;
 }
