added Success page and fixed layout stylesheet

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1,6 +1,44 @@
 .goback {
   cursor: pointer;
 }
-.underline {
-  background-color: black;
+
+.wrapper {
+  background-color: #f6f6f6;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  padding-top: 72px;
+  div {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+  }
+  & > div {
+    margin-right: 75px;
+  }
+  .underline {
+    margin: 0 auto;
+    width: 185px;
+    height: 0px;
+    background-color: black;
+    margin-top: 10px;
+    border: 2px solid #000000;
+  }
+}
+.goback {
+  position: absolute;
+  width: 53px;
+  height: 53px;
+  left: 70px;
+  top: 53px;
+  background-image: url('../../assets/goback.png');
+}
+section {
+  max-width: 1225px;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 80px 150px 0px 150px;
+  background-color: white;
 }
