--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -7,4 +7,8 @@
   width: 387px;
   height: 60px;
   // margin-bottom: 26px;
+  font-family: 'Helvetica Neue';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
 }
