--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,14 @@
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('../src/assets/HelveticaNeue.ttc');
+}
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   // border: 1px solid #f00;
+  font-size: 100%;
+  font-family: 'Helvetica Neue';
 }
 
 body {
@@ -11,10 +17,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('../src/assets/HelveticaNeue.ttc');
-}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
